--- a/tp_menu.html
+++ b/tp_menu.html
@@ -7,7 +7,7 @@
 	Menu Page
 	Hannah Lichtman
 	1/1/2025
-	--!>
+	-->
 
     <meta charset="UTF-8">
     <title>Menu</title>
@@ -25,9 +25,6 @@
 			</ul>
 		</nav>
 	</header>
-    <div class="nameButton">
-    <button id="button">Background</button>
-     </div>
     <article>
         <dl>
             <div class="item"><dt>
@@ -54,7 +51,9 @@
                 <dd><input type="number" id="cake" min="0"></dd>
                 </div>
         </dl>
-        <h2> Total:    <span id="total">0.00</span></h2>
+        <div class="total">
+            <h2 id="total">Total:    <span>0.00</span></h2>
+        </div>
     </article>
     <footer>
 		<address>
