--- a/tp_main.html
+++ b/tp_main.html
@@ -7,7 +7,7 @@
 	Home Page
 	Hannah Lichtman
 	1/1/2025
-	--!>
+	-->
 	
 	<meta charset="utf-8">
 	<meta name="keywords" content="produce, fruit, vegetables, farm, attractions, fresh, food, cafe, West End">
@@ -24,22 +24,17 @@
 			</ul>
 		</nav>
 	</header>
-	<div class="nameButton"></div>
-	<button id="button">Background</button>
 	<article>
-		<p>Welcome to Golds, a family-owned bakery in the heart of Brooklyn. For over three
-			generations, we've been serving freshly baked goods made from the finest ingredients.
-			Every bite is crafted with love and care, and we take pride in being a cherished part of the local community.
+		<p>Welcome to Golds, a family-owned bakery in the heart of Brooklyn. For over three generations, we've been crafting
+			delicious baked goods with the finest ingredients. We are proud to be a part of serve the local community.
 		</p>
 		<img src="images/store.png" alt="Golds Storefront" class="pic">
-		<p>At Golds, we believe in the tradition of quality and homemade goodness. Our recipes are passed down through generations,
-			ensuring a taste that feels like home. Our commitment to freshness and flavor means you'll always find something delightful,
-			no matter what you're in the mood for. We also offer catering for your celebrations, so your event can be just as sweet as our treats.
+		<p>At Golds, we believe in quality and homemade goodness. With recipes passed down through generations,
+			each bite tastes like home. Our commitment to freshness and flavor means you'll always find something delightful.
+			We also offer made-to-order specialty cakes, making your celebration unforgettable.
 		</p>
-
-		<p> Come visit us at Golds Bakery and experience the warm, welcoming atmosphere. Located in the heart of Brooklyn, we're excited to share our
-			love for baking with you. Stop by today for a taste of tradition, and let us be part of
-			your next meal or celebration. We can't wait to serve you!
+		<p> Come visit Golds Bakery and experience the warm, welcoming atmosphere. Stop by today for a taste of tradition,
+			and let us be part of your next meal or special occasion. We can't wait to serve you!
 		</p>
 	</article>
 	<footer>
